--- a/Home.html
+++ b/Home.html
@@ -3,49 +3,20 @@
 <head>
 	<title>Katy Photo Gallery</title>
 	<link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
-	<style>
-	body {
-		margin: 0;
-		background-color: #f5dcf7;
-   		font-family: 'Dancing Script';
-	}
-	ul {
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-	}
-	li {
-		float: left;
-	}
-	li a {
-		display: block;
-		padding: 20px 20px;
-   		color: black;
-   		font-size: 22pt;
-   		text-align: center;
-   		text-decoration: none; 
-	}
-	li a:hover {
-		color: white;
-	}
-	li img {
-		padding: 0;
-		margin: 2px;
-	}
-	</style>
+	<link href="katy_stylesheet.css" rel="stylesheet">
 </head>
 <body>
 	<ul>
-		<li><a href="home.html">Home</a></li>
-		<li><a href="home.html">Gallery</a></li>
-		<li><a href="home.html">About Me</a></li>
-		<li><a href="home.html">Pricing</a></li>
-		<li><a href="home.html">Booking</a></li>
-		<li><a href="home.html">Testimonials</a></li>
+		<li><a class="current" href="home.html">Home</a></li>
+		<li><a href="Gallery.html">Gallery</a></li>
+		<li><a href="About_me.html">About Me</a></li>
+		<li><a href="Pricing.html">Pricing</a></li>
+		<li><a href="Booking.html">Booking</a></li>
+		<li><a href="Testimonials.html">Testimonials</a></li>
 	</ul>
 	<div>
 		<ul>
+			<img style="width: 100%; height: 20%;" src="Images/hawaiiHome.jpg">
 			<li><img src="Images/200x150.png"><li>
 			<li><img src="Images/200x150.png"><li>
 			<li><img src="Images/200x150.png"><li>
@@ -53,8 +24,9 @@
 			<li><img src="Images/200x150.png"><li>
 			<li><img src="Images/200x150.png"><li>
 		</ul>
-		<img style="width: 100%; height: 20%;" src="Images/1.jpg">
 	</div>
-	<footer>Footer Info</footer>
+	<footer>
+		<p style="padding-top: 10px;">Footer Info</p>
+	</footer>
 </body>
 </html>
