Udpate to home_test and add image files for use on the site

--- a/home_test.html
+++ b/home_test.html
@@ -4,20 +4,110 @@
 	<title>Gallery</title>
 	<link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
 	<link href="katy_stylesheet.css" rel="stylesheet">
-</head>
-<body>
-	<ul>
-		<li><a href="home.html">Home</a></li>
-		<li><a class="current" href="Gallery.html">Gallery</a></li>
-		<li><a href="About_me.html">About Me</a></li>
-		<li><a href="Pricing.html">Pricing</a></li>
-		<li><a href="Booking.html">Booking</a></li>
-		<li><a href="Testimonials.html">Testimonials</a></li>
-	</ul>
-	<h1>Gallery</h1>
-	<!-- Container for slideshow -->
-	<div class="container">
-		<!-- Full width images with numbering -->
+	<style type="text/css">
+		* {
+			box-sizing: border-box;
+		}
+		
+		/* Poistion the image container (needed to position the ledt and right arrows) */
+		.container {
+			position: relative;
+		}
+
+		/* Hide the images by default */
+		.mySlides {
+			display: none;
+		}
+
+		/* Add a pointer when hovering over the thumbnail images */
+		.cursor {
+			cursor: pointer;
+		}
+
+		/* Next and Previous buttons */
+		.prev,
+		.next {
+		  	cursor: pointer;
+		  	position: absolute;
+		  	top: 40%;
+		  	width: auto;
+		  	padding: 16px;
+		  	margin-top: -50px;
+		  	color: white;
+		  	font-weight: bold;
+		  	font-size: 20px;
+		  	border-radius: 0 3px 3px 0;
+		  	user-select: none;
+		  	-webkit-user-select: none;
+		}
+
+		/* Position the "next button" to the right */
+		.next {
+		  	right: 0;
+		  	border-radius: 3px 0 0 3px;
+		}
+
+		/* On hover, add a black background color with a little bit see-through */
+		.prev:hover,
+		.next:hover {
+			background-color: rgba(0, 0, 0, 0.8);
+		}
+		
+		/* Number text (1/3 etc) */
+		.numbertext {
+		  	color: #f2f2f2;
+		  	font-size: 12px;
+		  	padding: 8px 12px;
+		  	position: absolute;
+		  	top: 0;
+		}
+		
+		/* Container for image text */
+		.caption-container {
+		  	text-align: center;
+		  	background-color: #222;
+		  	padding: 2px 16px;
+		  	color: white;
+		}
+		
+		.row:after {
+		  	content: "";
+		  	display: table;
+		  	clear: both;
+		}
+		
+		/* Six columns side by side */
+		.column {
+		  	float: left;
+		  	width: 16.66%;
+		}
+		
+		/* Add a transparency effect for thumnbail images */
+		.demo {
+		  	opacity: 0.6;
+		}
+		
+		.active,
+		.demo:hover {
+		  	opacity: 1;
+		}
+		
+		
+	</style>
+	</head>
+	<body>
+		<ul>
+			<li><a href="home.html">Home</a></li>
+			<li><a class="current" href="Gallery.html">Gallery</a></li>
+			<li><a href="About_me.html">About Me</a></li>
+			<li><a href="Pricing.html">Pricing</a></li>
+			<li><a href="Booking.html">Booking</a></li>
+			<li><a href="Testimonials.html">Testimonials</a></li>
+		</ul>
+		<h1>Gallery</h1>
+		<!-- Container for slideshow -->
+		<div class="container">
+			<!-- Full width images with numbering -->
 		<div class="mySlides">
 			<div class="numberText">1 / 6</div>
 				<img src="" style="width: 100%">
@@ -48,6 +138,82 @@
 				<img src="" style="width: 100%">
 		</div>
 
+		<!-- Next and Previous buttons -->
+		<a class="prev" onclick="plusSlide(-1)">&#10094;</a>
+		<a class="next" onclick="plusSlide(1)">&#10095;</a>
+
+		<!-- Image text -->
+		<div class="caption-container">
+			<p id="caption"></p>
+		</div>
+
+		<!-- Thumbnail images -->
+		<div class="row">
+			<div class="column">
+				<img class="demo cursor" src="Images/img_snow.jpg" style="width:100%" onclick="currrentSlide(1)" alt="Snow">
+			</div>
+
+		<div class="row">
+			<div class="column">
+				<img class="demo cursor" src="Images/img_5terre.jpg" style="width:100%" onclick="currrentSlide(2)" alt="Cinqe Terre">
+			</div>
+
+		<div class="row">
+			<div class="column">
+				<img class="demo cursor" src="Images/img_lights.jpg" style="width:100%" onclick="currrentSlide(3)" alt="Lights">
+			</div>
+
+		<div class="row">
+			<div class="column">
+				<img class="demo cursor" src="Images/img_mountains.jpg" style="width:100%" onclick="currrentSlide(4)" alt="Mountains">
+			</div>
+
+		<div class="row">
+			<div class="column">
+				<img class="demo cursor" src="Images/img_nature.jpg" style="width:100%" onclick="currrentSlide(5)" alt="Nature">
+			</div>
+
+		<div class="row">
+			<div class="column">
+				<img class="demo cursor" src="Images/img_woods.jpg" style="width:100%" onclick="currrentSlide(6)" alt="Woods">
+			</div>
+		</div>
 	</div>
+	<script type="text/javascript">
+		var slideIndex = 1;
+		showSlides(slideIndex);
+
+		// Next/Previous controls
+		function plusSlide(n) {
+			showSlides(slideIndex += n);
+		}
+
+		// Thumbnail image controls
+		function currrentSlide(n) {
+			showSlides(slideIndex = n);
+		}
+
+		function showSlides(n) {
+			var i;
+			var slides = document.getElementsByClassName("mySlides");
+			var dots = document.getElementsByClassName("demo");
+			var captionText = document.getElementsById("caption");
+			if(n > slides.length) {
+				slideIndex = 1;
+			} 
+			if(n < 1) {
+				slideIndex = slides.length;
+			}
+			for (i = 0; i < slides.length; i++) {
+				slides[i].style.display = "none";
+			}
+			for(i = 0; i < dots.length; i++) {
+				dots[i].className = dots[i].className.replace(" active", "");
+			}
+			slides[slideIndex-1].style.display = "block";
+			dots[slideIndex-1].className += " active";
+			captionText.innerHTML = dots[slideIndex-1].alt;
+		}
+	</script>
 </body>
 </html>
